[project]
name = "aeon"
version = "4.0.0a"
description = "Language with Refinement Types"
authors = [
    { name = "Alcides Fonseca", email = "me@alcidesfonseca.com" }
]
readme = "Readme.md"
requires-python = "~=3.10"

keywords = ["programming language, liquid types"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

scripts.aeon = "aeon.__main__:main"

dependencies = [
    'argparse',
    'configparser',
    'lark',
    'loguru',
    'geneticengine@https://github.com/alcides/GeneticEngine/archive/3feb0b48494f6b4352a3ed87a0fef29a98e4b4a1.zip',
    'multiprocess',
    'numpy',
    'pathos',
    'pillow',
    'psb2',
    'pydantic==1.8.2',
    'pygls==1.3.1',
    'pytest',
    'requests',
    'scikit-image',
    'sympy',
    'textdistance',
    'z3-solver >= 4',
    'zc-buildout==3.0.1',
    'zstandard==0.23.0',
    'zss'
]

[project.urls]
homepage = "https://github.com/alcides/aeon"
repository = "https://github.com/alcides/aeon"
documentation = "https://github.com/alcides/aeon"

[project.license]
text = "https://opensource.org/licenses/MIT"

[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 67.6.0']

[tool.setuptools]
py-modules = ["aeon"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
'examples' = ['*.csv']

[tool.docformatter]
syntax = 'google'
black = true
recursive = true
docstring-length = [60, 100]
blank = false
pre-summary-newline = true
close-quotes-on-newline = true
wrap-one-line = true

[tool.black]
line-length = 120


[tool.pycln]
all = true

[tool.ruff]
line-length = 120

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E741", "E501"]

per-file-ignores = {}


[tool.ruff.lint.flake8-import-conventions.aliases]
altair = "alt"
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
seaborn = "sns"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
