[project]
name = "AeonLang"
version = "4.0.0b"
description = "Language with Refinement Types"
authors = [
    { name = "Alcides Fonseca", email = "me@alcidesfonseca.com" }
]
readme = "Readme.md"
requires-python = ">3.10, <4"

keywords = ["programming language, liquid types"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

scripts.aeon = "aeon.__main__:main"

dependencies = [
    'argparse',
    'configparser',
    'lark',
    'loguru',
    'geneticengine==0.8.8',
    'multiprocess',
    'numpy',
    'pathos',
    'pillow',
    'psb2',
    'pydantic==2.11.7',
    'pygls==1.3.1',
    'pytest',
    'requests',
    'types-requests',
    'scikit-image',
    'sympy',
    'textdistance',
    'z3-solver >= 4',
    'zstandard==0.24.0',
    'zss'
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-beartype"
]

[project.urls]
homepage = "https://github.com/alcides/aeon"
repository = "https://github.com/alcides/aeon"
documentation = "https://github.com/alcides/aeon"

[project.license]
text = "https://opensource.org/licenses/MIT"

[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 67.6.0']

[tool.setuptools]
# Package a folder (aeon/) and its subpackages instead of a single
# file aeon.py as the module

# py-modules = ["aeon"]
include-package-data = true

[tool.setuptools.packages.find]
# Include any package whose name starts with aeon
include = ["aeon*"]

[tool.setuptools.package-data]
# Include .lark files found in subdirectories
aeon = ["**/*.lark"]

[tool.docformatter]
syntax = 'google'
black = true
recursive = true
docstring-length = [60, 100]
blank = false
pre-summary-newline = true
close-quotes-on-newline = true
wrap-one-line = true

[tool.black]
line-length = 120


[tool.pycln]
all = true

[tool.ruff]
line-length = 120

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"


# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = ["E741", "E501"]

per-file-ignores = {}


[tool.ruff.lint.flake8-import-conventions.aliases]
altair = "alt"
"matplotlib.pyplot" = "plt"
numpy = "np"
pandas = "pd"
seaborn = "sns"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[tool.pytest.ini_options]
beartype_packages = 'aeon.core'
