[metadata]
name = Aeon
version = 4.0.0a
description = Programming Language with Refinement Types
long_description = file: Readme.md
long_description_content_type = text/markdown
url = http://github.com/alcides/aeon/
author = Alcides Fonseca
author_email = me@alcidesfonseca.com
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Bug Tracker = http://github.com/alcides/aeon/issues

[options]
packages = find:
install_requires =
    lark
    z3-solver
python_requires = >=3.9

[options.packages.find]
where = .

[options.package_data]
* = *.lark
