[package]
name = "aeon_rs"
version = "0.1.0"
edition = "2021"
description = "Rust core for Aeon: AST, type-checker, and interpreter via PyO3"

[lib]
name = "aeon_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module", "abi3-py310"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 1
